# pulseaudio-modules-droid-hidl

./: README.md  configure.ac  meson.build  meson_options.txt
rpm/: pulseaudio-modules-droid-hidl.spec
src/: Makefile.am  meson.build
src/hidl/: Makefile.am  common.h  dbus-comms.c  dbus-comms.h  hidl-helper.c  impl-af.c  impl-hidl.c  impl.h  logging.h  meson.build  module-droid-hidl-symdef.h  module-droid-hidl.c
